--- a/mon-pix/app/index.html
+++ b/mon-pix/app/index.html
@@ -6,10 +6,8 @@
     <title>Pix</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-pix_app.png">
+
     <meta name="theme-color" content="#ffffff">
 
     {{content-for "head"}}
