--- a/admin/app/index.html
+++ b/admin/app/index.html
@@ -7,6 +7,8 @@
   <meta content="" name="description">
   <meta content="width=device-width, initial-scale=1" name="viewport">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-pix_admin.png">
+
   {{content-for "head"}}
 
   <link href="{{rootURL}}assets/vendor.css" integrity="" rel="stylesheet">
